--- a/wadapam.html
+++ b/wadapam.html
@@ -6,7 +6,7 @@
 
     <canvas id="canvas" width="1280" height="720" class="canvas"></canvas>
 
-        <button id="go">go</button>
+        <!-- <button id="go">go</button> -->
   <script src="baseShipTiles.js"></script>
   <script src="enemyship1.js"></script>
   <script src="enemyship1doors.js"></script>
