--- a/wadapam.html
+++ b/wadapam.html
@@ -12,6 +12,12 @@
   <script src="enemyship1doors.js"></script>
   <script src="enemyship2.js"></script>
   <script src="enemyship2doors.js"></script>
+  <script src="enemyship3.js"></script>
+  <script src="enemyship3doors.js"></script>
+  <script src="enemyship4.js"></script>
+  <script src="enemyship4doors.js"></script>
+  <script src="enemyship5.js"></script>
+  <script src="enemyship5doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
