--- a/wadapam.html
+++ b/wadapam.html
@@ -18,6 +18,16 @@
   <script src="enemyship4doors.js"></script>
   <script src="enemyship5.js"></script>
   <script src="enemyship5doors.js"></script>
+  <script src="enemyship6.js"></script>
+  <script src="enemyship6doors.js"></script>
+  <script src="enemyship7.js"></script>
+  <script src="enemyship7doors.js"></script>
+  <script src="enemyship8.js"></script>
+  <script src="enemyship8doors.js"></script>
+  <script src="enemyship9.js"></script>
+  <script src="enemyship9doors.js"></script>
+  <script src="enemyship10.js"></script>
+  <script src="enemyship10doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
