--- a/wadapam.html
+++ b/wadapam.html
@@ -29,6 +29,26 @@
   <script src="enemyship9doors.js"></script>
   <script src="enemyship10.js"></script>
   <script src="enemyship10doors.js"></script>
+  <script src="enemyship11.js"></script>
+  <script src="enemyship11doors.js"></script>
+  <script src="enemyship12.js"></script>
+  <script src="enemyship12doors.js"></script>
+  <script src="enemyship13.js"></script>
+  <script src="enemyship13doors.js"></script>
+  <script src="enemyship14.js"></script>
+  <script src="enemyship14doors.js"></script>
+  <script src="enemyship15.js"></script>
+  <script src="enemyship15doors.js"></script>
+  <script src="enemyship16.js"></script>
+  <script src="enemyship16doors.js"></script>
+  <script src="enemyship17.js"></script>
+  <script src="enemyship17doors.js"></script>
+  <script src="enemyship18.js"></script>
+  <script src="enemyship18doors.js"></script>
+  <script src="enemyship19.js"></script>
+  <script src="enemyship19doors.js"></script>
+  <script src="enemyship20.js"></script>
+  <script src="enemyship20doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
