--- a/wadapam.html
+++ b/wadapam.html
@@ -49,6 +49,16 @@
   <script src="enemyship19doors.js"></script>
   <script src="enemyship20.js"></script>
   <script src="enemyship20doors.js"></script>
+  <script src="enemyship21.js"></script>
+  <script src="enemyship21doors.js"></script>
+  <script src="enemyship22.js"></script>
+  <script src="enemyship22doors.js"></script>
+  <script src="enemyship23.js"></script>
+  <script src="enemyship23doors.js"></script>
+  <script src="enemyship24.js"></script>
+  <script src="enemyship24doors.js"></script>
+  <script src="enemyship25.js"></script>
+  <script src="enemyship25doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
