--- a/wadapam.html
+++ b/wadapam.html
@@ -6,6 +6,7 @@
 
     <canvas id="canvas" width="1280" height="720" class="canvas"></canvas>
     <canvas hidden id="starcanvas" width="1280" height="720" class="canvas"></canvas>
+    <canvas hidden id="shake" width="1280" height="720" class="canvas"></canvas>
 
         <!-- <button id="go">go</button> -->
   <script src="baseShipTiles.js"></script>
