--- a/wadapam.html
+++ b/wadapam.html
@@ -60,6 +60,16 @@
   <script src="enemyship24doors.js"></script>
   <script src="enemyship25.js"></script>
   <script src="enemyship25doors.js"></script>
+  <script src="enemyship26.js"></script>
+  <script src="enemyship26doors.js"></script>
+  <script src="enemyship27.js"></script>
+  <script src="enemyship27doors.js"></script>
+  <script src="enemyship28.js"></script>
+  <script src="enemyship28doors.js"></script>
+  <script src="enemyship29.js"></script>
+  <script src="enemyship29doors.js"></script>
+  <script src="enemyship30.js"></script>
+  <script src="enemyship30doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
