--- a/wadapam.html
+++ b/wadapam.html
@@ -70,6 +70,16 @@
   <script src="enemyship29doors.js"></script>
   <script src="enemyship30.js"></script>
   <script src="enemyship30doors.js"></script>
+  <script src="enemyship31.js"></script>
+  <script src="enemyship31doors.js"></script>
+  <script src="enemyship32.js"></script>
+  <script src="enemyship32doors.js"></script>
+  <script src="enemyship33.js"></script>
+  <script src="enemyship33doors.js"></script>
+  <script src="enemyship34.js"></script>
+  <script src="enemyship34doors.js"></script>
+  <script src="enemyship35.js"></script>
+  <script src="enemyship35doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
