--- a/index.html
+++ b/index.html
@@ -80,6 +80,32 @@
   <script src="enemyship34doors.js"></script>
   <script src="enemyship35.js"></script>
   <script src="enemyship35doors.js"></script>
+  <script src="enemyship36.js"></script>
+  <script src="enemyshipdoors36.js"></script>
+  <script src="enemyship37.js"></script>
+  <script src="enemyshipdoors37.js"></script>
+  <script src="enemyship38.js"></script>
+  <script src="enemyshipdoors38.js"></script>
+  <script src="enemyship39.js"></script>
+  <script src="enemyshipdoors39.js"></script>
+  <script src="enemyship40.js"></script>
+  <script src="enemyshipdoors40.js"></script>
+  <script src="ship2.js"></script>
+  <script src="ship2doors.js"></script>
+  <script src="ship3.js"></script>
+  <script src="ship3doors.js"></script>
+  <script src="ship4.js"></script>
+  <script src="ship4doors.js"></script>
+  <script src="ship5.js"></script>
+  <script src="ship5doors.js"></script>
+  <script src="ship6.js"></script>
+  <script src="ship6doors.js"></script>
+  <script src="ship7.js"></script>
+  <script src="ship7doors.js"></script>
+  <script src="ship8.js"></script>
+  <script src="ship8doors.js"></script>
+  <script src="ship9.js"></script>
+  <script src="ship9doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
