--- a/wadapam.html
+++ b/wadapam.html
@@ -80,9 +80,21 @@
   <script src="enemyship34doors.js"></script>
   <script src="enemyship35.js"></script>
   <script src="enemyship35doors.js"></script>
+  <script src="enemyship36.js"></script>
+  <script src="enemyshipdoors36.js"></script>
+  <script src="enemyship37.js"></script>
+  <script src="enemyshipdoors37.js"></script>
+  <script src="enemyship38.js"></script>
+  <script src="enemyshipdoors38.js"></script>
+  <script src="enemyship39.js"></script>
+  <script src="enemyshipdoors39.js"></script>
+  <script src="enemyship40.js"></script>
+  <script src="enemyshipdoors40.js"></script>
+  <script src="ship2.js"></script>
+  <script src="ship2doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
-  <script src="wodopom.js"></script>
+  <script src="shipeditor.js"></script>
   <h1>Clicking will start the game at the star map, clicking a star with a green link will jump you to combat. Combat is orchestrated by commanding crewmen and allocating energy to systems. Crewmen can be directed by clicking them in the ship and then clicking where you would like them to go. The system energy allocation is performed by clicking the battery icons in the lower left corner. Manually aiming weapons can be activated by right-clicking the weapon icon at the bottom. Select a weapon by clicking it. Selected weapons, once charged, can be targeted to a specific location in the enemy ship by clicking. In both ships, the systems are color coded. Magenta is weapons, Cyan is shield, Yellow is the helm, Orange is the engines, Blue is oxygen, Gray is security, Green is the medbay, and White is unused. The medbay can heal injured crewmen. Crewmen health is displayed in the top left. Hold shift for mouseover labels.</h1>
 
 </html>
