--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
   <script src="ship8doors.js"></script>
   <script src="ship9.js"></script>
   <script src="ship9doors.js"></script>
+  <script src="ship10.js"></script>
+  <script src="ship10doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
