--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <!-- <link rel="stylesheet" type="text/css" href="ztylesnotap.css"> -->
   </head>
 
-    <canvas id="canvas" width="1280" height="720" class="canvas"></canvas>
+    <canvas id="canvas" width="2560" height="1440" class="canvas"></canvas>
     <canvas hidden id="starcanvas" width="1280" height="720" class="canvas"></canvas>
+    <canvas hidden id="shipcanvas" width="1920" height="1080" class="canvas"></canvas>
     <canvas hidden id="shake" width="1280" height="720" class="canvas"></canvas>
 
         <!-- <button id="go">go</button> -->
@@ -108,6 +109,8 @@
   <script src="ship9doors.js"></script>
   <script src="ship10.js"></script>
   <script src="ship10doors.js"></script>
+  <script src="ship11.js"></script>
+  <script src="ship11doors.js"></script>
   <script src="astar.js"></script>
   <script src="doors.js"></script>
   <script src="wodopom.js"></script>
