--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <canvas id="canvas" width="1920" height="1080" class="canvas"></canvas>
     <canvas hidden id="starcanvas" width="1280" height="720" class="canvas"></canvas>
     <canvas hidden id="shipcanvas" width="1280" height="720" class="canvas"></canvas>
-    <canvas hidden id="shake" width="1280" height="720" class="canvas"></canvas>
+    <canvas hidden id="shake" width="1920" height="1080" class="canvas"></canvas>
 
         <!-- <button id="go">go</button> -->
-  <script src="baseShipTiles.js"></script>
   <script src="enemyship1.js"></script>
   <script src="enemyship1doors.js"></script>
   <script src="enemyship2.js"></script>
@@ -91,6 +90,8 @@
   <script src="enemyshipdoors39.js"></script>
   <script src="enemyship40.js"></script>
   <script src="enemyshipdoors40.js"></script>
+  <script src="baseShipTiles.js"></script>
+  <script src="doors.js"></script>
   <script src="ship2.js"></script>
   <script src="ship2doors.js"></script>
   <script src="ship3.js"></script>
@@ -111,8 +112,9 @@
   <script src="ship10doors.js"></script>
   <script src="ship11.js"></script>
   <script src="ship11doors.js"></script>
+  <script src="ship12.js"></script>
+  <script src="ship12doors.js"></script>
   <script src="astar.js"></script>
-  <script src="doors.js"></script>
   <script src="wodopom.js"></script>
 
 </html>
