--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
   <script src="ship11doors.js"></script>
   <script src="ship12.js"></script>
   <script src="ship12doors.js"></script>
+  <script src="ship13.js"></script>
+  <script src="ship13doors.js"></script>
+  <script src="ship14.js"></script>
+  <script src="ship14doors.js"></script>
   <script src="astar.js"></script>
   <script src="wodopom.js"></script>
 
